--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,7 @@ body {
     border-width: 10px;
 }
   
-.planeta,.lua {
+.planeta {
     border-radius: 50%;
     position: absolute;
     top: 50%;
@@ -102,7 +102,7 @@ body {
         transform: rotate(0deg) translateX(107.28px) rotate(0deg);
     }
     to {
-        transform: rotate(360deg) translateX(107.28px) rotate(-360deg);
+        transform: rotate(-360deg) translateX(107.28px) rotate(360deg);
     }
 }
 
